2004-12-05  Bruno coudoin  <bruno.coudoin@free.fr>

	Franck Doucet remade all the euro coins and paper to be more kiddy
	and more generic


	* boards/Makefile.am:
	* boards/chronos.xml.in:
	* boards/money/euro/c10c.png:
	* boards/money/euro/c1c.png:
	* boards/money/euro/c1e.png:
	* boards/money/euro/c20c.png:
	* boards/money/euro/c2c.png:
	* boards/money/euro/c2e.png:
	* boards/money/euro/c50c.png:
	* boards/money/euro/c5c.png:
	* boards/money/euro/p100e.jpg:
	* boards/money/euro/p200e.jpg:
	* boards/money/euro/p500e.jpg:
	* boards/searace.xml.in: start of a searace activity
	* docs/website/auteur.html: added spip menus
	* docs/website/footer.html:
	* docs/website/header.html:
	* docs/website/menu.html:
	* src/boards/money_widget.c:
	* src/boards/money_widget.h:
	* src/boards/python/searace.py: far from playable yet

2004-12-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/gcompris2spip.pl: renamed from spipparser.pl
	* docs/spipparser.pl: replaced by gcompris2spip.pl

2004-11-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* gcompris-edit.desktop.in: fixed bad menu entry, now it's gcompris_edit
	closes debian bug #281457
	* Makefile.am: removed 	gcompris.desktop gcompris-edit.desktop from the dist file

2004-11-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/flags/gcompris_flags.assetml.in: added chinese support
	* boards/flags/zh.png: taken from the CIA fact worldbook
	* configure.in: added chinese
	* docs/spipparser.pl: added one locale sections
	* src/gcompris/config.c: added chinese

2004-11-29  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: changed to release 6.4: release 6.4
	* boards/wordsgame/wordslevel1.nb: created by Klaus Ade Johnstad.
	* boards/wordsgame/wordslevel2.nb: - 
	* boards/wordsgame/wordslevelmax.nb: -
	* po/nb.po: translation updated by Klaus Ade Johnstad.

2004-11-29  Bruno coudoin  <bruno.coudoin@free.fr>
	
	to fix the newline issues in xml files, added the token xml:space="preserve"
	Thanks to Danilo Segan for that.
	