@@ -1,3 +1,12 @@
+2004-12-08  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/images/arrow.png: added from openclipart.com for searace
+	* boards/money/euro/p10e.png: missing images from Franck Doucet
+	* boards/money/euro/p20e.png: -
+	* boards/money/euro/p50e.png: -
+	* boards/money/euro/p5e.png: -
+	* src/boards/python/searace.py: updated, now draw the wind map. not playable yet.
+
 2004-12-05  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	Franck Doucet remade all the euro coins and paper to be more kiddy
